--- a/pulumi-language-json/test/webserver-invoke-yaml/Main.yaml
+++ b/pulumi-language-json/test/webserver-invoke-yaml/Main.yaml
@@ -30,8 +30,7 @@ Resources:
             owners: ["137112412989"]
             mostRecent: true
           Return: id
-      userData: 
-        Fn::Sub: |-
+      userData: !Sub |-
           #!/bin/bash
           echo 'Hello, World from ${WebSecGrp.arn}!' > index.html
           nohup python -m SimpleHTTPServer 80 &
@@ -39,11 +38,8 @@ Resources:
         - Ref: WebSecGrp
 Outputs:
   InstanceId:
-    Value:
-      Ref: WebServer
+    Value: !Ref WebServer
   PublicIp:
-    Value:
-      Fn::GetAtt: ["WebServer", "publicIp"]
+    Value: !GetAtt WebServer.publicIp
   PublicHostName:
-    Value:
-      Fn::GetAtt: ["WebServer", "publicDns"]
+    Value: !GetAtt WebServer.publicDns
