--- a/pulumi-language-json/test/webserver-invoke-yaml/Pulumi.yaml
+++ b/pulumi-language-json/test/webserver-invoke-yaml/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: webserver-invoke-yaml
+name: webserver-invoke-json
 runtime: json
 description: Basic example of an AWS web server accessible over HTTP
