Support first-class providers
Providers can be created just like any other resource, using the `pulumi:providers:aws` style of type token.  The name of a provider can be passed as Provider to another resource to use that provider for the resource creation.

--- a/pulumi-language-json/test/webserver-invoke-yaml/Main.yaml
+++ b/pulumi-language-json/test/webserver-invoke-yaml/Main.yaml
@@ -37,6 +37,13 @@ Resources:
           nohup python -m SimpleHTTPServer 80 &
       vpcSecurityGroupIds:
         - Ref: WebSecGrp
+  UsEast2Provider:
+    Type: pulumi:providers:aws
+    Properties:
+      region: us-east-2
+  MyBucket:
+    Type: aws:s3/bucket:Bucket
+    Provider: UsEast2Provider
 Outputs:
   InstanceId:
     Value: !Ref WebServer
