--- a/pulumi-language-yaml/test/webserver-invoke-yaml/Pulumi.yaml
+++ b/pulumi-language-yaml/test/webserver-invoke-yaml/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: webserver-json
-runtime: json
+name: webserver-invoke-json
+runtime: yaml
 description: Basic example of an AWS web server accessible over HTTP
