Support template strings by default
All string arguments are now template substitutions (equivalent to `!Sub str`) by default.  $ and \ must now be escaped if needed literally in a string value.

--- a/pulumi-language-yaml/test/getting-started-yaml/Pulumi.yaml
+++ b/pulumi-language-yaml/test/getting-started-yaml/Pulumi.yaml
@@ -16,4 +16,4 @@ resources:
       acl: public-read
       contentType: text/html
 outputs:
-  bucketEndpoint: !Sub http://${my-bucket.websiteEndpoint}
+  bucketEndpoint: http://${my-bucket.websiteEndpoint}
