Support config defaults

--- a/pulumi-language-yaml/test/webserver-invoke-yaml/Main.yaml
+++ b/pulumi-language-yaml/test/webserver-invoke-yaml/Main.yaml
@@ -20,7 +20,7 @@ resources:
   WebServer:
     type: aws:ec2/instance:Instance
     properties:
-      instanceType: t2.micro
+      instanceType: ${InstanceType}
       ami:
         Fn::Invoke:
           Function: aws:index/getAmi:getAmi
