--- a/.goreleaser.prerelease.yml
+++ b/.goreleaser.prerelease.yml
@@ -12,7 +12,8 @@ archives:
 - id: archive
   name_template: '{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}'
 builds:
-- binary: pulumi-resource-yaml
+- id: pulumi-resource-yaml
+  binary: pulumi-resource-yaml
   dir: provider
   env:
   - CGO_ENABLED=0
@@ -29,7 +30,8 @@ builds:
   - -w
   - -X github.com/pulumi/pulumi-yaml/pkg/version.Version={{.Tag}}
   main: ./cmd/pulumi-resource-yaml/
-- binary: yaml2pulumi
+- id: yaml2pulumi
+  binary: yaml2pulumi
   dir: provider
   env:
   - CGO_ENABLED=0
