--- a/.github/workflows/stage-publish.yml
+++ b/.github/workflows/stage-publish.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{matrix.goversion}}
+          go-version: 1.17.x
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
