--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -21,4 +21,4 @@ jobs:
     needs: [test, lint]
     uses: ./.github/workflows/stage-publish.yml
     with:
-      goreleaser-args: -p 3 -f .prerelease.yml --rm-dist --skip-validate --timeout 60m0s --release-notes=CHANGELOG_PENDING.md
+      goreleaser-args: -p 3 -f .goreleaser.yml --rm-dist --skip-validate --timeout 60m0s --release-notes=CHANGELOG_PENDING.md
