--- a/.github/workflows/publish-snapshot.yaml
+++ b/.github/workflows/publish-snapshot.yaml
@@ -17,8 +17,12 @@ jobs:
   test:
     uses: ./.github/workflows/stage-test.yml
     with:
-      # TODO: Enable live tests after configuring secrets
       live-test: true
+    secrets:
+      PULUMI_ACCESS_TOKEN:     ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      AWS_ACCESS_KEY_ID:       ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY:   ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_CI_ROLE_ARN:         ${{ secrets.AWS_CI_ROLE_ARN }}
   publish:
     needs: [test, lint]
     uses: ./.github/workflows/stage-publish.yml
