add and scope github_token in lint step

--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -3,6 +3,11 @@ name: Lint
 on:
   workflow_call:
 
+permissions: read-all
+
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   lint:
     container: golangci/golangci-lint:latest
