ci: Add comment notification, fix command dispatch

--- a/.github/workflows/command-dispatch.yml
+++ b/.github/workflows/command-dispatch.yml
@@ -16,7 +16,7 @@ jobs:
           commands: run-acceptance-tests
           permission: write
           issue-type: pull-request
-          repository: pulumi/pulumi
+          repository: pulumi/pulumi-yaml
   auto-rebase-command:
     runs-on: ubuntu-latest
     steps:
@@ -29,4 +29,4 @@ jobs:
           commands: auto-rebase
           permission: write
           issue-type: pull-request
-          repository: pulumi/pulumi
+          repository: pulumi/pulumi-yaml
