--- a/.github/workflows/pr-tests-live.yaml
+++ b/.github/workflows/pr-tests-live.yaml
@@ -5,6 +5,24 @@ on:
     types: [ run-acceptance-tests-command ]
 
 jobs:
+  comment-notification:
+    # We only care about adding the result to the PR if it's a repository_dispatch event
+    if: github.event_name == 'repository_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create URL to the run output
+        id: vars
+        run: echo ::set-output name=run-url::https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+      - name: Update with Result
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
+          issue-number: ${{ github.event.client_payload.github.payload.issue.number }}
+          body: |
+            Please view the results of the PR Build + Acceptance Tests Run [Here][1]
+
+            [1]: ${{ steps.vars.outputs.run-url }}
   test:
     uses: pulumi/pulumi-yaml/.github/workflows/stage-test.yml@main
     with:
