--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -10,6 +10,17 @@ configuration:
       - t3.small
       - m4.large
     description: Enter t3.micro, t3.small, or m4.large. Default is t3.micro.
+variables:
+  ec2ami:
+    Fn::Invoke:
+      Function: aws:index/getAmi:getAmi
+      Arguments:
+        filters:
+          - name: name
+            values: ["amzn-ami-hvm-*-x86_64-ebs"]
+        owners: ["137112412989"]
+        mostRecent: true
+      Return: id
 resources:
   WebSecGrp:
     type: aws:ec2/securityGroup:SecurityGroup
@@ -23,16 +34,7 @@ resources:
     type: aws:ec2/instance:Instance
     properties:
       instanceType: ${InstanceType}
-      ami:
-        Fn::Invoke:
-          Function: aws:index/getAmi:getAmi
-          Arguments:
-            filters:
-              - name: name
-                values: ["amzn-ami-hvm-*-x86_64-ebs"]
-            owners: ["137112412989"]
-            mostRecent: true
-          Return: id
+      ami: ${ec2ami}
       userData: |-
           #!/bin/bash
           echo 'Hello, World from ${WebSecGrp.arn}!' > index.html
