--- a/examples/azure-app-service/Pulumi.yaml
+++ b/examples/azure-app-service/Pulumi.yaml
@@ -53,7 +53,7 @@ resources:
     type: azure-native:sql:Server
     properties:
       resourceGroupName: ${appservicegroup.name}
-      administratorLogin: pulumi
+      administratorLogin: ${sqlAdmin}
       administratorLoginPassword: ${sqlPassword.result}
       version: '12.0'
   db:
