--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -1,3 +1,52 @@
-name: webserver-json
+name: webserver
 runtime: yaml
 description: Basic example of an AWS web server accessible over HTTP
+configuration:
+  InstanceType:
+    type: String
+    default: t3.micro
+    allowedValues:
+      - t3.micro
+      - t3.small
+      - m4.large
+    description: Enter t3.micro, t3.small, or m4.large. Default is t3.micro.
+resources:
+  WebSecGrp:
+    type: aws:ec2/securityGroup:SecurityGroup
+    properties:
+      ingress:
+        - protocol: tcp
+          fromPort: 80
+          toPort: 80
+          cidrBlocks: ["0.0.0.0/0"]
+  WebServer:
+    type: aws:ec2/instance:Instance
+    properties:
+      instanceType: ${InstanceType}
+      ami:
+        Fn::Invoke:
+          Function: aws:index/getAmi:getAmi
+          Arguments:
+            filters:
+              - name: name
+                values: ["amzn-ami-hvm-*-x86_64-ebs"]
+            owners: ["137112412989"]
+            mostRecent: true
+          Return: id
+      userData: |-
+          #!/bin/bash
+          echo 'Hello, World from ${WebSecGrp.arn}!' > index.html
+          nohup python -m SimpleHTTPServer 80 &
+      vpcSecurityGroupIds:
+        - ${WebSecGrp}
+  UsEast2Provider:
+    type: pulumi:providers:aws
+    properties:
+      region: us-east-2
+  MyBucket:
+    type: aws:s3/bucket:Bucket
+    provider: UsEast2Provider
+outputs:
+  InstanceId: ${WebServer}
+  PublicIp: ${WebServer.publicIp}
+  PublicHostName: ${WebServer.publicDns}
