--- a/.github/workflows/pr-tests-live.yaml
+++ b/.github/workflows/pr-tests-live.yaml
@@ -27,6 +27,7 @@ jobs:
     uses: pulumi/pulumi-yaml/.github/workflows/stage-test.yml@main
     with:
       live-test: true
+      commit-ref: refs/pull/${{ github.event.client_payload.pull_request.number }}/merge
     secrets:
       PULUMI_ACCESS_TOKEN:     ${{ secrets.PULUMI_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID:       ${{ secrets.AWS_ACCESS_KEY_ID }}
