--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -44,6 +44,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+        with:
+          ref: ${{ inputs.commit-ref }}
       - name: Install Go
         uses: actions/setup-go@v2
         with:
