Check program gen, omit schemas

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Pulumi.*.yaml
 stack.json
 goreleaser/
 bin/*
+
+# Other cannot be downloaded, as it does not correspond to a real package.
+!pkg/pulumiyaml/testing/test/testdata/other.json
+pkg/pulumiyaml/testing/test/testdata/*.json
