ci: enable full test suite on PRs

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -1,4 +1,4 @@
-name: Pull Request Dry Run Tests
+name: Acceptance Tests
 
 on:
   pull_request:
@@ -12,4 +12,4 @@ jobs:
   test:
     uses: pulumi/pulumi-yaml/.github/workflows/stage-test.yml@main
     with:
-      live-test: false
+      live-test: true
