Handle more resource options

--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -1,6 +1,12 @@
 resources:
     bucket1:
         type: aws:s3:Bucket
+        dependson:
+            - ${provider}
+        ignorechanges:
+            - ${bucket}
+            - ${lifecycleRules[0]}
+        protect: true
         provider: ${provider}
     provider:
         type: pulumi:providers:aws
