--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -7,7 +7,7 @@ resources:
             - ${bucket}
             - ${lifecycleRules[0]}
         protect: true
-        provider: ${provider}
+        provider: provider
     provider:
         type: pulumi:providers:aws
         properties:
