Similar test cases

--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -4,8 +4,8 @@ resources:
         dependson:
             - ${provider}
         ignorechanges:
-            - ${bucket}
-            - ${lifecycleRules[0]}
+            - bucket
+            - lifecycleRules[0]
         protect: true
         provider: provider
     provider:
