--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -45,7 +45,8 @@ resources:
       region: us-east-2
   MyBucket:
     type: aws:s3/bucket:Bucket
-    provider: UsEast2Provider
+    options:
+      provider: UsEast2Provider
 outputs:
   InstanceId: ${WebServer}
   PublicIp: ${WebServer.publicIp}
