--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -1,13 +1,14 @@
 resources:
     bucket1:
         type: aws:s3:Bucket
-        dependson:
-            - ${provider}
-        ignorechanges:
-            - bucket
-            - lifecycleRules[0]
-        protect: true
-        provider: provider
+        resourceoptions:
+            dependson:
+                - ${provider}
+            ignorechanges:
+                - bucket
+                - lifecycleRules[0]
+            protect: true
+            provider: provider
     provider:
         type: pulumi:providers:aws
         properties:
