--- a/pkg/pulumiyaml/testing/test/testdata/azure-native-pp/yaml/azure-native.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/azure-native-pp/yaml/azure-native.yaml
@@ -1,4 +1,12 @@
 resources:
+    frontDoor:
+        type: azure-native:network:FrontDoor
+        properties:
+            routingRules:
+                - routeConfiguration:
+                    odataType: '#Microsoft.Azure.FrontDoor.Models.FrontdoorForwardingConfiguration'
+                    backendPool:
+                        id: /subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/frontDoors/frontDoor1/backendPools/backendPool1
     endpoint:
         type: azure-native:cdn:Endpoint
         properties:
@@ -8,7 +16,7 @@ resources:
                         - name: CacheExpiration
                           parameters:
                             cacheBehavior: Override
-                            cacheDuration: "10:10:09"
+                            cacheDuration: 10:10:09
                             cacheType: All
                             odataType: '#Microsoft.Azure.Cdn.Models.DeliveryRuleCacheExpirationActionParameters'
                         - name: ModifyResponseHeader
@@ -29,23 +37,15 @@ resources:
                             matchValues:
                                 - 192.168.1.0/24
                                 - 10.0.0.0/24
-                            negateCondition: "true"
+                            negateCondition: true
                             odataType: '#Microsoft.Azure.Cdn.Models.DeliveryRuleRemoteAddressConditionParameters'
                             operator: IPMatch
                       name: rule1
-                      order: "1"
+                      order: 1
             endpointName: endpoint1
-            isCompressionEnabled: "true"
-            isHttpAllowed: "true"
-            isHttpsAllowed: "true"
+            isCompressionEnabled: true
+            isHttpAllowed: true
+            isHttpsAllowed: true
             location: WestUs
             profileName: profileName
             resourceGroupName: resourceGroupName
-    frontDoor:
-        type: azure-native:network:FrontDoor
-        properties:
-            routingRules:
-                - routeConfiguration:
-                    backendPool:
-                        id: /subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/frontDoors/frontDoor1/backendPools/backendPool1
-                    odataType: '#Microsoft.Azure.FrontDoor.Models.FrontdoorForwardingConfiguration'
