--- a/pkg/pulumiyaml/testing/test/testdata/kubernetes-pod-pp/yaml/kubernetes-pod.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/kubernetes-pod-pp/yaml/kubernetes-pod.yaml
@@ -5,13 +5,13 @@ resources:
             apiVersion: v1
             kind: Pod
             metadata:
-                name: bar
                 namespace: foo
+                name: bar
             spec:
                 containers:
-                    - image: nginx:1.14-alpine
-                      name: nginx
+                    - name: nginx
+                      image: nginx:1.14-alpine
                       resources:
                         limits:
-                            cpu: "0.2"
                             memory: 20Mi
+                            cpu: 0.2
