--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -5,7 +5,7 @@ resources:
             region: us-west-2
     bucket1:
         type: aws:s3:Bucket
-        resourceoptions:
+        options:
             provider: provider
             dependson:
                 - ${provider}
