Don't cleanup types

--- a/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
@@ -1,6 +1,6 @@
 resources:
     example:
-        type: aws:iam:Policy
+        type: aws:iam/policy:Policy
         properties:
             name: example_policy
             path: /
