--- a/pkg/pulumiyaml/testing/test/testdata/aws-secret-pp/yaml/aws-secret.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-secret-pp/yaml/aws-secret.yaml
@@ -1,5 +1,5 @@
 resources:
     dbCluster:
-        type: aws:rds:Cluster
+        type: aws:rds/cluster:Cluster
         properties:
             masterPassword: foobar
