--- a/pkg/pulumiyaml/testing/test/testdata/random-pet-pp/yaml/random-pet.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/random-pet-pp/yaml/random-pet.yaml
@@ -1,5 +1,5 @@
 resources:
     random-pet:
-        type: random::RandomPet
+        type: random:index/randomPet:RandomPet
         properties:
             prefix: doggo
