--- a/pkg/pulumiyaml/testing/test/testdata/aws-s3-logging-pp/yaml/aws-s3-logging.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-s3-logging-pp/yaml/aws-s3-logging.yaml
@@ -1,8 +1,8 @@
 resources:
     logs:
-        type: aws:s3:Bucket
+        type: aws:s3/bucket:Bucket
     bucket:
-        type: aws:s3:Bucket
+        type: aws:s3/bucket:Bucket
         properties:
             loggings:
                 - targetBucket: ${logs.bucket}
