--- a/pkg/pulumiyaml/testing/test/testdata/third-party-package-pp/yaml/third-party-package.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/third-party-package-pp/yaml/third-party-package.yaml
@@ -1,6 +1,6 @@
 resources:
     Other:
-        type: other::Thing
+        type: other:index:Thing
         properties:
             idea: Support Third Party
     Question:
