Get aws-webserver example working

--- a/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
@@ -8,7 +8,7 @@ resources:
 variables:
     policyDocument:
         Fn::Invoke:
-            Function: aws:iam:getPolicyDocument
+            Function: aws:iam/getPolicyDocument:getPolicyDocument
             Arguments:
                 statements:
                     - sid: 1
