feat: implement expression evaluation to resource instances

--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -40,7 +40,7 @@ resources:
           echo 'Hello, World from ${WebSecGrp.arn}!' > index.html
           nohup python -m SimpleHTTPServer 80 &
       vpcSecurityGroupIds:
-        - ${WebSecGrp}
+        - ${WebSecGrp.id}
   UsEast2Provider:
     type: pulumi:providers:aws
     properties:
@@ -50,6 +50,6 @@ resources:
     options:
       provider: UsEast2Provider
 outputs:
-  InstanceId: ${WebServer}
+  InstanceId: ${WebServer.id}
   PublicIp: ${WebServer.publicIp}
   PublicHostName: ${WebServer.publicDns}
