--- a/pkg/pulumiyaml/testing/test/testdata/output-funcs-aws-pp/yaml/output-funcs-aws.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/output-funcs-aws-pp/yaml/output-funcs-aws.yaml
@@ -1,42 +1,43 @@
 resources:
     aws_vpc:
-        type: aws:ec2:Vpc
+        type: aws:ec2/vpc:Vpc
         properties:
             cidrBlock: 10.0.0.0/16
             instanceTenancy: default
+    privateS3VpcEndpoint:
+        type: aws:ec2/vpcEndpoint:VpcEndpoint
+        properties:
+            vpcId: ${aws_vpc.id}
+            serviceName: com.amazonaws.us-west-2.s3
     bar:
-        type: aws:ec2:NetworkAcl
+        type: aws:ec2/networkAcl:NetworkAcl
         properties:
             vpcId: ${aws_vpc.id}
     privateS3NetworkAclRule:
-        type: aws:ec2:NetworkAclRule
+        type: aws:ec2/networkAclRule:NetworkAclRule
         properties:
-            cidrBlock: ${privateS3PrefixList.cidrBlocks[0]}
-            egress: "false"
-            fromPort: "443"
             networkAclId: ${bar.id}
+            ruleNumber: 200
+            egress: false
             protocol: tcp
             ruleAction: allow
-            ruleNumber: "200"
-            toPort: "443"
-    privateS3VpcEndpoint:
-        type: aws:ec2:VpcEndpoint
-        properties:
-            serviceName: com.amazonaws.us-west-2.s3
-            vpcId: ${aws_vpc.id}
+            cidrBlock: ${privateS3PrefixList[0]}
+            fromPort: 443
+            toPort: 443
 variables:
+    privateS3PrefixList:
+        Fn::Invoke:
+            Function: aws:ec2/getPrefixList:getPrefixList
+            Arguments:
+                prefixListId: ${privateS3VpcEndpoint.prefixListId}
+            Return: cidrBlocks
     amis:
         Fn::Invoke:
+            Function: aws:ec2/getAmiIds:getAmiIds
             Arguments:
+                owners:
+                    - ${bar.id}
                 filters:
                     - name: ${bar.id}
                       values:
                         - pulumi*
-                owners:
-                    - ${bar.id}
-            Function: aws:ec2:getAmiIds
-    privateS3PrefixList:
-        Fn::Invoke:
-            Arguments:
-                prefixListId: ${privateS3VpcEndpoint.prefixListId}
-            Function: aws:ec2:getPrefixList
