--- a/pkg/pulumiyaml/testing/test/testdata/azure-sa-pp/yaml/azure-sa.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/azure-sa-pp/yaml/azure-sa.yaml
@@ -5,7 +5,7 @@ configuration:
         type: string
     locationParam:
         type: string
-        default: foo
+        default: ${resourceGroupVar}
     storageAccountTierParam:
         type: string
         default: Standard
@@ -28,5 +28,6 @@ variables:
             Function: azure:core/getResourceGroup:getResourceGroup
             Arguments:
                 name: ${resourceGroupNameParam}
+            Return: location
 outputs:
     storageAccountNameOut: ${storageAccountResource.name}
