Add split to codegen

--- a/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
@@ -11,3 +11,9 @@ resources:
                               - bar
                       - -policy
             path: /
+            policy:
+                Fn::Select:
+                    - 0
+                    - Fn::Split:
+                        - '-'
+                        - '{}-foo'
