Add PULUMI_ACCEPT; remove version files

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ command-output/
 obj/
 __pycache__/
 node_modules/
+examples/**/package.json
+examples/**/yarn.lock
+examples/**/go.sum
+examples/**/go.mod
