--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -8,9 +8,9 @@ on:
 
 jobs:
   lint:
-    uses: ./stage-lint.yml/@${{env.PR_COMMIT_SHA}}
+    uses: ./github/workflows/stage-lint.yml/@${{env.PR_COMMIT_SHA}}
   test:
-    uses: ./stage-test.yml/@${{env.PR_COMMIT_SHA}}
+    uses: ./github/workflows/stage-test.yml/@${{env.PR_COMMIT_SHA}}
     with:
       live-test: true
     secrets:
