--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -10,7 +10,9 @@ jobs:
   lint:
     uses: ./.github/workflows/stage-lint.yml
   test:
-    uses: ./.github/workflows/stage-lint.yml
+    uses: ./.github/workflows/stage-test.yml
+    with:
+      live-test: true
     secrets:
       PULUMI_ACCESS_TOKEN:     ${{ secrets.PULUMI_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID:       ${{ secrets.AWS_ACCESS_KEY_ID }}
