--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -84,6 +84,9 @@ jobs:
       - name: Install yarn
         run: |
           npm install -g yarn@1.22
+      - name: Clean yarn cache
+        run: |
+          yarn cache clean
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         # Skip on dry-run
