Parallel for local tests

--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -51,6 +51,7 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  PULUMI_TEST_PARALLEL: false
 
 jobs:
   test:
