Fix two errors discovered in programgen
These errors were always present but we now ensure that the error
appropriately bubbles up.

--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -6,7 +6,7 @@ resources:
     bucket1:
         type: aws:s3/bucket:Bucket
         options:
-            provider: provider
+            provider: ${provider}
             dependson:
                 - ${provider}
             ignorechanges:
