Remove unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ examples/**/package.json
 examples/**/yarn.lock
 examples/**/go.sum
 examples/**/go.mod
+examples/**/Program.cs
+examples/**/dotnet.csproj
